--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-deprecated-custom-components": "^0.1.2",
     "react-native-tab-navigator": "^0.3.4"
   },
   "devDependencies": {
