--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-deprecated-custom-components": "^0.1.2",
-    "react-native-tab-navigator": "^0.3.4"
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-paper": "^3.4.0",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
