--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
