--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-check-box": "^2.1.7",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
