--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-htmlview": "^0.15.0",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
