--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-redux-helpers": "^4.0.1",
