--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^1.5.2",
     "react-native-htmlview": "^0.15.0",
     "react-native-paper": "^3.4.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-vector-icons": "^6.6.0",
