--- a/static/data/config.json
+++ b/static/data/config.json
@@ -1,42 +1,16 @@
 {
   "aboutMe": {
-    "Tutorial": {
-      "name": "教程",
-      "icon": "ios-bookmarks",
-      "items": [
-        {
-          "title": "React Native基础教程",
-          "url": "https://m.imooc.com/learn/808"
-        },
-        {
-          "title": "React Native高级实战教程",
-          "url": "https://coding.imooc.com/class/304.html?mc_marking=911b955aff9c2cfc95f12d0f15e1b2e7&mc_channel=shouji"
-        }
-      ]
-    },
     "Blog": {
       "name": "技术博客",
       "icon": "ios-laptop",
       "items": [
         {
-          "title": "个人博客",
-          "url": "http://jiapenghui.com"
-        },
-        {
-          "title": "CSDN",
-          "url": "http://blog.csdn.net/fengyuzhengfan"
-        },
-        {
           "title": "简书",
-          "url": "http://www.jianshu.com/users/ca3943a4172a/latest_articles"
+          "url": "https://www.jianshu.com/u/fe17b85a3247"
         },
         {
           "title": "GitHub",
-          "url": "https://github.com/crazycodeboy"
-        },
-        {
-          "title": "慕课网",
-          "url": "http://www.imooc.com/u/4951150"
+          "url": "https://github.com/wangjunw"
         }
       ]
     },
@@ -46,27 +20,13 @@
       "items": {
         "QQ": {
           "title": "QQ",
-          "account": "1586866509"
+          "account": "11xxxxx64"
         },
         "Email": {
           "title": "Email",
-          "account": "crazycodeboy@gmail.com"
+          "account": "junxxxxx@sina.com"
         }
       }
-    },
-    "QQ": {
-      "name": "技术交流群",
-      "icon": "ios-chatbubbles",
-      "items": [
-        {
-          "title": "移动开发者技术分享群",
-          "account": "335939197"
-        },
-        {
-          "title": "React Native学习交流群",
-          "account": "165774887"
-        }
-      ]
     }
   },
   "info": {
@@ -75,8 +35,8 @@
     "currentRepoUrl": "https://api.github.com/repos/crazycodeboy/GitHubPopular"
   },
   "author": {
-    "name": "CrazyCodeBoy",
-    "description": "专注于移动开发，分享知识，共享快乐。",
+    "name": "JunJun",
+    "description": "ReactNative 学习，不断进步",
     "avatar": "http://avatar.csdn.net/1/1/E/1_fengyuzhengfan.jpg",
     "backgroundImg": "http://www.devio.org/io/GitHubPopular/img/for_githubpopular_about_me.jpg",
     "url": "http://www.devio.org/"
