--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-sortable-listview": "^0.2.9",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
