--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
+
     ext {
         buildToolsVersion = "28.0.3"
         minSdkVersion = 16
@@ -15,6 +17,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:3.4.2")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -28,6 +31,10 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        // 友盟的maven仓库地址，教程给的maven { url 'https://dl.bintray.com/umsdk/release' }需要改成括号形式
+        maven {
+            url("https://dl.bintray.com/umsdk/release")
         }
 
         google()
