--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,10 +187,9 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
-    implementation project(path: ':trackshare')
     // 添加友盟基础组件库和统计SDK库依赖 教程给的compile需要改成implementation
-    api  'com.umeng.umsdk:analytics:8.0.0'
-    api  'com.umeng.umsdk:common:2.0.0'
+    implementation  'com.umeng.umsdk:analytics:8.0.0'
+    implementation  'com.umeng.umsdk:common:2.0.0'
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
@@ -199,7 +198,7 @@ dependencies {
         implementation jscFlavor
     }
 }
-
+targetSdkVersion
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
