--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,8 @@ target 'githubReactNative' do
 
 
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'githubReactNativeTests' do
     inherit! :search_paths
     # Pods for testing
